# lumin

./: .gitignore  CPPLINT.cfg  meson.build
dbus/: compositor.xml  compositor_adapter.h  settings.xml  settings_proxy.h  shortcut.xml  shortcut_adapter.h  window.xml  window_adapter.h
include/: controller.h  cursor.h  cursor_mode.h  display_config.h  graph.h  gtk_shell.h  idisplay_config.h  ios.h  iplatform.h  key_binding.h  keyboard.h  layer_shell.h  mouse.h  output.h  posix_os.h  renderer.h  rpc.h  seat.h  server.h  settings.h  shell.h  signal.hpp  switcher.h  turbo_cursor_mode.h  turbo_keyboard.h  turbo_output.h  turbo_server.h  turbo_view.h  turbo_view_xdg.h  turbo_view_xwayland.h  view.h  wayland-contrib.h  wlroots.h  wlroots_platform.h  wm_cursor_mode.h  wm_key_binding.h  wm_key_binding_cmd.h  wm_key_binding_dock_right.h  wm_keyboard.h  wm_output.h  (+6 more)
include/dbus/adapters/: compositor.h  shortcut.h  window.h
include/key_bindings/: key_binding_cancel_activity.h  key_binding_cmd.h  key_binding_dock_left.h  key_binding_dock_right.h  key_binding_maximize.h  key_binding_quit.h  key_binding_switch_app.h  key_binding_switch_app_reverse.h
include/keybindings/: key_binding_cmd.h  key_binding_dock_left.h  key_binding_dock_right.h  key_binding_maximize.h  key_binding_quit.h  wm_key_binding_cmd.h  wm_key_binding_dock_left.h  wm_key_binding_dock_right.h  wm_key_binding_maximize.h  wm_key_binding_quit.h
include/services/: isettings_service.h  settings_service.h
include/shell/switcher/: switcher.h  view.h
include/views/: xdg_view.h  xwayland_view.h
protocols/: gtk-shell.h  wlr-layer-shell-unstable-v1-protocol.h  xdg-shell-protocol.h
share/: lumin.desktop
src/: controller.cpp  cursor.cpp  display_config.cpp  graph.cpp  key_binding.cpp  keyboard.cpp  main.cpp  mouse.cpp  output.cpp  posix_os.cpp  rpc.cpp  seat.cpp  server.cpp  settings.cpp  shell.cpp  switcher.cpp  turbo_output.cpp  turbo_server.cpp  turbo_view.cpp  turbo_view_xdg.cpp  turbo_view_xwayland.cpp  view.cpp  wlroots_platform.cpp  wm_key_binding.cpp  wm_key_binding_cmd.cpp  wm_key_binding_dock_left.cpp  wm_key_binding_dock_right.cpp  wm_key_binding_maximize.cpp  wm_key_binding_quit.cpp  wm_output.cpp  wm_server.cpp  wm_view.cpp  wm_view_xdg.cpp  wm_view_xwayland.cpp  xdg_shell_wl.cpp  xdg_view.cpp  xwayland_view.cpp
src/gtk_shell/: gtk_shell.cpp  gtk_shell_wl.cpp  gtk_surface.cpp
src/key_bindings/: key_binding_cancel_activity.cpp  key_binding_cmd.cpp  key_binding_dock_left.cpp  key_binding_dock_right.cpp  key_binding_maximize.cpp  key_binding_quit.cpp  key_binding_switch_app.cpp  key_binding_switch_app_reverse.cpp
src/keybindings/: key_binding_cmd.cpp  key_binding_dock_left.cpp  key_binding_dock_right.cpp  key_binding_maximize.cpp  key_binding_quit.cpp  wm_key_binding_cmd.cpp  wm_key_binding_dock_left.cpp  wm_key_binding_dock_right.cpp  wm_key_binding_maximize.cpp  wm_key_binding_quit.cpp
src/services/: settings_service.cpp
src/shell/switcher/: switcher.cpp  view.cpp
src/views/: xdg_view.cpp  xwayland_view.cpp
src/wlr_layer_shell/: layer_shell.cpp  layer_shell_surface.cpp  layer_shell_wl.cpp
tests/: display_config_tests.cpp  mocks.h  server_tests.cpp
